use HsYAML for cfg

--- a/hadui/package.yaml
+++ b/hadui/package.yaml
@@ -29,10 +29,9 @@ dependencies:
   - text
   - bytestring
   - directory
+  - HsYAML
   - aeson
   - aeson-qq
-  - neat-interpolation
-  - yaml
   - unliftio
   - websockets
   - snap-core
