drop network-3.x dependency, play with current latest lts-14.11

--- a/hadui/package.yaml
+++ b/hadui/package.yaml
@@ -22,7 +22,8 @@ dependencies:
   - ghc >= 8.6
   - unix
   - process
-  - network >= 3.0
+  - network
+  - websockets
 
   - base
   - rio
@@ -33,7 +34,6 @@ dependencies:
   - aeson
   - aeson-qq
   - unliftio
-  - websockets
   - snap-core
   - snap-server
 
