support runtime error dump

--- a/stack.yaml
+++ b/stack.yaml
@@ -5,4 +5,18 @@ packages:
 
 extra-deps:
 
-compiler-check: newer-minor
+compiler-check: match-exact
+
+# CAVEATS
+#
+#   binary distributions referenced following have NO support, checkout:
+#
+# https://gitlab.haskell.org/complyue/ghc-ife-bindist/blob/master/README.md
+
+ghc-variant: ife
+
+setup-info:
+  ghc:
+    macosx-custom-ife:
+      8.6.5:
+        url: "https://gitlab.haskell.org/complyue/ghc-ife-bindist/raw/master/ghc-8.6.5-x86_64-apple-darwin.tar.xz"
