switch build&dist to nix+cabal

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,25 +1,12 @@
-resolver: lts-14.11
+resolver: lts-14.14
 
 packages:
   - hadui
 
-extra-deps:
-
-compiler-check: match-exact
-
-# CAVEATS
-#
-#   binary distributions referenced following have NO support, checkout:
-#
-# https://gitlab.haskell.org/complyue/ghc-ife-bindist/blob/master/README.md
-
-ghc-variant: ife
-
-setup-info:
-  ghc:
-    macosx-custom-ife:
-      8.6.5:
-        url: "https://gitlab.haskell.org/complyue/ghc-ife-bindist/raw/master/ghc-8.6.5-x86_64-apple-darwin.tar.gz2"
-    linux64-custom-ife:
-      8.6.5:
-        url: "https://gitlab.haskell.org/complyue/ghc-ife-bindist/raw/master/ghc-8.6.5-x86_64-unknown-linux.tar.xz"
+# Stack's Nix integration not working well so far, when building
+# with stack, always run `stack build` within `nix-shell` for now.
+# here to disable Stack's Nix integration and force it to use
+# the GHC provided by Nix on PATH
+system-ghc: true
+nix:
+  enable: false
